# heic-windows-extension

./: .gitignore  CMakeLists.txt  Dockerfile  dev.sh  heic-extension.sublime-project  test.heic  vcpkg.json
.github/workflows/: build.yml
build_win/: CMakeCache.txt
src/: HeicDecoder.cpp
